add lombok and refactor a bit